# KGLiNER

./: .example-mojoenv  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KGLiNER.md  KGLiNER.🔥  Makefile  README copy.md  README.md  example.env  pyproject.toml  setup.🔥  tree.txt
_private/: compare.md  genetic_algorithm.md  kgcreator.py  mojo10.md  schema_gen.py
_py/: main.py
db/: db.env  mongo_db.🔥  postgresql.🔥
db/tests/: test_mongo.🔥
docker/: docker-compose.yml  run.sh
gen_ner/: __init__.🔥  datamapping.🔥  gen_labels.🔥  gli_ner.🔥  label_ext.🔥  py_wrapper.🔥
kgliner/: __init__.🔥  cli.🔥  datamapping.🔥  gli_ner.🔥
kgliner/tests/: tests_kgliner.🔥
kgliner_process/: datamapping.🔥  gliner_processing.🔥
kgliner_process/tests/llm_evals/: benchllm.🔥
shared/: infiscal_sm.🔥  py_wrapper.🔥
shared/llamaindex_pdf/: chunk_pdf.🔥
shared/portkey_gateway/: generate_labels.🔥  portkey_config.json
shared/utils/: cli_selector.py  get_arxiv.🔥  http_requests.py  qdrant_utils.py
shared/utils/embeddings/: chunkEmbed.py
src/: cli.🔥  main.🔥
tests/: example.🔥  test_kgcreator.🔥  tests_kgliner.🔥
