[tool.poetry]
name = "kgliner_mojo"
version = "0.1.0"
description = "Generalized Knowledge Graph Generator using NER, PortkeyAI and KGCreator"
authors = ["snyata <core@synavate.tech>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
click = "^8.1.7"
gliner = "^0.1.2"
transformers = "^4.39.3"
tqdm = "^4.66.2"
portkey-ai = "^1.2.2"
prettyprint = "^0.1.5"
tree = "^0.2.4"
pymongo = "^4.6.3"
infisical-python = "^2.1.8"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
qdrant-client = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
